# usbip-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
scripts/: create-cargo-config.sh  setup-sysroot.sh
src/: hwdb.rs  lib.rs  util.rs
src/client/: attach.rs  detach.rs  list.rs  mod.rs  port.rs
src/drivers/: mod.rs
src/drivers/host/: mod.rs
src/drivers/vhci/: mod.rs  state.rs
src/server/: bind.rs  list_local.rs  mod.rs  unbind.rs
usbip/: Cargo.toml
usbip-cli/: Cargo.toml
usbip-cli/src/: main.rs
usbip/src/: hwdb.rs  lib.rs  main.rs  net.rs  proto.rs
usbip/src/client/: attach.rs  detach.rs  list.rs  mod.rs  port.rs
usbip/src/drivers/: mod.rs  vhci_hcd.rs
usbip/src/proto/: char_buf.rs  mod.rs
usbipd/: Cargo.toml
usbipd/src/: main.rs
