[workspace]
resolver = "3"
members = [
    "usbip",
    "usbipd"
]

[package]
name = "usbip-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "usbip"
path = "src/lib.rs"

[dependencies]
compact_str ={version =  "0.9.0", features = ["serde" ]}
derivative = "2.2.0"
endian_codec = "0.1.1"
nix = { version = "0.30.1", features = ["user"] }
num_enum = "0.7.5"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = "0.6.1"
sscanf = "0.4.4"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
udev = {version = "0.9.3"}

usb-ids = {version = "1.2025.2", optional = true}

[features]
default = ["baked-hwdb"]

baked-hwdb = ["dep:usb-ids"]
runtime-hwdb = ["udev/hwdb"]

# These settings reduce the binary sizes by ~30%. We could be more aggressive if
# we wanted to, but this is a pretty easy win for almost no effort. Unless it
# becomes an harder constraint, we're not investing more effort into it for the
# time being.
[profile.release]
codegen-units = 1
strip = "symbols"
lto   = "fat"
opt-level = "s"
