[package]
name = "usbip-rs-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "usbip"
path = "src/main.rs"

[dependencies]
usbip-rs = {path = "../usbip", default-features = false}

clap = {version = "4.5.51", features = ["derive"]}
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.145"
colored = "3.0.0"

[features]
default = ["baked-hwdb"]

baked-hwdb = ["usbip-rs/baked-hwdb"]
runtime-hwdb = ["usbip-rs/runtime-hwdb"]
